--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-modernist
+title: Welcome to Anton's GitHub homepage!
+description: Feel free to bookmark this to keep an eye on my project updates
